--- a/asset/index.css
+++ b/asset/index.css
@@ -8,6 +8,18 @@
 body {
   background-color: #e0e0e0;
 }
+.watermark {
+  position: fixed;
+  top: 25px;
+  left: 0;
+  z-index: 0;
+  opacity: 0.15;
+  filter: grayscale(100%) brightness(50%);
+}
+main {
+  position: absolute;
+  z-index: 10;
+}
 
 .header__container {
   position: fixed;
@@ -43,6 +55,8 @@ body {
 .header__menu ul {
   list-style: none;
   display: flex;
+  height: 50px;
+  align-items: center;
   gap: 20px;
   padding: 0;
 }
@@ -91,8 +105,8 @@ body {
 .drop-box {
   position: absolute;
   top: 40px;
-  left: 350px;
-  width: 780px;
+  left: 300px;
+  width: 740px;
   padding: 40px 35px 30px;
   border-radius: 12px;
   background: rgba(255, 255, 255, 0.46);
@@ -245,7 +259,7 @@ main {
 }
 
 .sum-cards {
-  width: 1000px;
+  display: inline-block;
   padding: 20px;
   background-color: #f8f9fa;
   border-radius: 8px;
@@ -266,16 +280,34 @@ main {
   color: #6e6e6e;
 }
 
+.sum__header__export a {
+  text-decoration: none;
+  color: #6e6e6e;
+
+  transition: color 0.2s ease;
+}
+.sum__header__export a:hover {
+  color: #1e1e1e;
+}
+
+.sum__main {
+  display: flex;
+  flex-direction: row;
+  margin-top: 30px;
+  gap: 30px;
+}
+
 .sum__main-1 {
   width: 150px;
   height: 150px;
-  margin-top: 30px;
   padding: 10px;
   background: linear-gradient(120deg, #ffffff, #ff6d6c);
   border-radius: 8px;
+  font-size: 15px;
+  cursor: pointer;
 
   box-shadow: 0 10px 30px rgba(0, 0, 0, 0.15);
-  transition: transform 0.35s cubic-bezier(0.25, 1, 0.5, 1);
+  transition: transform 0.5s cubic-bezier(0.25, 1, 0.5, 1);
 }
 .main__text {
   font-weight: bold;
@@ -292,6 +324,106 @@ main {
 .sum__main-1:hover {
   transform: scale(1.05);
 }
-.sum__main-1:active {
-  transform: scale(0.95);
+
+.sum__main-2 {
+  width: 150px;
+  height: 150px;
+  padding: 10px;
+  background: linear-gradient(120deg, #ffffff, #37e499);
+  border-radius: 8px;
+  cursor: pointer;
+  font-size: 15px;
+
+  box-shadow: 0 10px 30px rgba(0, 0, 0, 0.15);
+  transition: transform 0.5s cubic-bezier(0.25, 1, 0.5, 1);
+}
+.sum__main-2:hover {
+  transform: scale(1.05);
+}
+
+.sum__main-3 {
+  width: 150px;
+  height: 150px;
+  padding: 10px;
+  background: linear-gradient(120deg, #ffffff, #1eb7ee);
+  border-radius: 8px;
+  cursor: pointer;
+  font-size: 15px;
+
+  box-shadow: 0 10px 30px rgba(0, 0, 0, 0.15);
+  transition: transform 0.5s cubic-bezier(0.25, 1, 0.5, 1);
+}
+.sum__main-3:hover {
+  transform: scale(1.05);
+}
+
+.sum__main-4 {
+  width: 150px;
+  height: 150px;
+  padding: 10px;
+  background: linear-gradient(120deg, #ffffff, #ee6a1e);
+  border-radius: 8px;
+  cursor: pointer;
+  font-size: 15px;
+
+  box-shadow: 0 10px 30px rgba(0, 0, 0, 0.15);
+  transition: transform 0.5s cubic-bezier(0.25, 1, 0.5, 1);
+}
+.sum__main-4:hover {
+  transform: scale(1.05);
+}
+
+.sum__main-5 {
+  width: 150px;
+  height: 150px;
+  padding: 10px;
+  background: linear-gradient(120deg, #ffffff, #ee1eba);
+  border-radius: 8px;
+  cursor: pointer;
+  font-size: 15px;
+
+  box-shadow: 0 10px 30px rgba(0, 0, 0, 0.15);
+  transition: transform 0.5s cubic-bezier(0.25, 1, 0.5, 1);
+}
+.sum__main-5:hover {
+  transform: scale(1.05);
+}
+
+.main__data i {
+  display: none;
+  opacity: 0;
+  pointer-events: none;
+
+  transition: transform 0.35s cubic-bezier(0.25, 1, 0.5, 1), color 0.2s ease;
+}
+
+.main__data i.fa-caret-up.show {
+  display: inline-block;
+  opacity: 1;
+  pointer-events: auto;
+}
+.main__data i.fa-caret-down.show {
+  display: inline-block;
+  opacity: 1;
+  pointer-events: auto;
+}
+
+.percent-container {
+  width: 120px;
+  margin-top: 30px;
+  background-color: #f3f3f3;
+  border-radius: 8px;
+  box-shadow: inset 0 2px 5px rgba(0, 0, 0, 0.1);
+  overflow: hidden;
+}
+.percent-bar {
+  font-size: 10px;
+  width: 0%;
+  border-radius: 8px;
+  background: #1f96e6;
+  transition: width 0.4s cubic-bezier(0.25, 1, 0.5, 1);
+  display: flex;
+  align-items: center;
+  justify-content: flex-end;
+  color: #333;
 }
