--- a/asset/index.css
+++ b/asset/index.css
@@ -259,10 +259,11 @@ main {
 }
 
 .sum-cards {
+  position: fixed;
   display: inline-block;
   padding: 20px;
   background-color: #f8f9fa;
-  border-radius: 8px;
+  border-radius: 12px;
   box-shadow: 0 10px 30px rgba(0, 0, 0, 0.15);
 }
 
@@ -302,7 +303,7 @@ main {
   height: 150px;
   padding: 10px;
   background: linear-gradient(120deg, #ffffff, #ff6d6c);
-  border-radius: 8px;
+  border-radius: 12px;
   font-size: 15px;
   cursor: pointer;
 
@@ -330,7 +331,7 @@ main {
   height: 150px;
   padding: 10px;
   background: linear-gradient(120deg, #ffffff, #37e499);
-  border-radius: 8px;
+  border-radius: 12px;
   cursor: pointer;
   font-size: 15px;
 
@@ -346,7 +347,7 @@ main {
   height: 150px;
   padding: 10px;
   background: linear-gradient(120deg, #ffffff, #1eb7ee);
-  border-radius: 8px;
+  border-radius: 12px;
   cursor: pointer;
   font-size: 15px;
 
@@ -362,7 +363,7 @@ main {
   height: 150px;
   padding: 10px;
   background: linear-gradient(120deg, #ffffff, #ee6a1e);
-  border-radius: 8px;
+  border-radius: 12px;
   cursor: pointer;
   font-size: 15px;
 
@@ -378,7 +379,7 @@ main {
   height: 150px;
   padding: 10px;
   background: linear-gradient(120deg, #ffffff, #ee1eba);
-  border-radius: 8px;
+  border-radius: 12px;
   cursor: pointer;
   font-size: 15px;
 
@@ -412,7 +413,7 @@ main {
   width: 120px;
   margin-top: 30px;
   background-color: #f3f3f3;
-  border-radius: 8px;
+  border-radius: 12px;
   box-shadow: inset 0 2px 5px rgba(0, 0, 0, 0.1);
   overflow: hidden;
 }
@@ -426,4 +427,76 @@ main {
   align-items: center;
   justify-content: flex-end;
   color: #333;
+}
+
+.notice-cards {
+  display: inline-block;
+  position: fixed;
+  padding: 20px;
+  width: 385px;
+  height: 536px;
+  left: 950px;
+  top: 70px;
+  background-color: #f8f9fa;
+  border-radius: 12px;
+  box-shadow: 0 10px 30px rgba(0, 0, 0, 0.15);
+}
+
+.notice__header {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+
+.notice__header__export a {
+  text-decoration: none;
+  color: #6e6e6e;
+
+  transition: color 0.2s ease;
+}
+.notice__header__export a:hover {
+  color: #1e1e1e;
+}
+
+.notice__header__text .todayDate {
+  color: #6e6e6e;
+}
+.notice__header__text {
+  display: flex;
+  flex-direction: column;
+  gap: 5px;
+}
+
+.notice__main {
+  display: flex;
+  flex-direction: column;
+  padding: 10px;
+  margin-left: 0px;
+  width: 400px;
+  height: 170px;
+  margin-top: 10px;
+  gap: 5px;
+  background: transparent;
+
+  overflow-y: auto;
+  overflow-x: hidden;
+}
+
+.notice {
+  width: 320px;
+  height: 55px;
+  padding: 10px;
+  border-radius: 12px;
+  background-color: rgba(173, 216, 230, 0.2);
+  backdrop-filter: blur(12px) saturate(180%);
+  -webkit-backdrop-filter: blur(12px) saturate(180%);
+
+  transition: transform 0.35s cubic-bezier(0.25, 1, 0.5, 1);
+}
+.notice:hover {
+  transform: scale(1.05);
+}
+
+.notice__tittle {
+  font-weight: bold;
 }
